--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Install golang-migration
         run: |
           curl -L https://github.com/golang-migrate/migrate/releases/download/v4.17.1/migrate.linux-amd64.tar.gz | tar xvz
-          mv migrate.linux-amd64 /usr/bin
+          mv migrate /usr/bin
           which migrate
 
       - name: Run migration
