feat: [main] Correction command run migrations

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,8 +37,8 @@ jobs:
           sudo mv migrate /usr/bin
           which migrate
 
-      - name: Run migration
-        run: make migrationup
+      - name: Run migrations
+        run: make migrateup
 
       - name: Test
         run: make test
